@startuml "ejercicio 30"

class Institute{
    - String typpe;
    - String educationalLevel;
    - List<Researcher> listResearchers;
    - BusinessGroup businessGroup;
}


class BusinessGroup {
    - double fundsInvested;
    - List<Institute> listInstitutes;
    - List<ResearchProject> listResearchProject;
}

class ResearchProject {
    - String name;
    - String description;
    - Date publicationDateColciencias;
    - List<ReserchProduct> listReserchProduct;
    - BusinessGroup businessGroup;
}

class ReserchProduct {
    - String name;
    - String type;
    - String description;
    - String status;
    - Int assignedPoints;
    - List<Task> listTasks;
    - Document docuent;
    - ResearchProject reserchProject;
    - List<Researcher> listResearch;

}

class Researcher {
    - String name;
    - String roleInProyect;
    - String roleInActivity;
    - Institute institute;

}

class Task {
    - String description;
    - Date duration;
    - List<Resource> listResources;
}

class Resource {
    - String type;
    - String description;
    - String availability;

}

class Category {
    - String description;
    - String categoryType;
    - String categoryunindexed;
}

class Document {
    - String report;
    - Date date;
}

class Publication {
    - String title;
    - String description;
    - String statusPublication;
    - Date publicationDate;
    - ReserchProduct ReserchProduct;
}




Task "1" -- "*" Resource
ReserchProduct "1" -- "*" Task
ReserchProduct "1" -- "1" Document
ReserchProduct "*" -- "1" Category
ReserchProduct "1" -- "1" Publication
ReserchProduct "*" -- "1" ResearchProject
ReserchProduct "1" -- "*" Researcher
Researcher "*" -- "1" Institute
BusinessGroup "1" -- "*" Institute
BusinessGroup "1" -- "*" ResearchProject



@enduml